fix z-index in _modal styles

--- a/src/assets/css/_artwork-list.scss
+++ b/src/assets/css/_artwork-list.scss
@@ -62,7 +62,7 @@
     height: 80px;
     top: -18px;
     left: -18px;
-    z-index: 1;
+    z-index: 2;
     background-position: bottom;
     background-repeat: no-repeat;
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='50' viewBox='0 0 40 50' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h40v50L20 38 0 50V0z' fill='%23EB5757'/%3E%3C/svg%3E");
